# case_eng_ml

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
modelo/: transformers.py
src/: app.py
src/config/: event.json  input.json  teste.json
src/ml_model_titanic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/: generate_artfacts.py  pipeline_model.pkl
src/terraform/: main.tf  openapi.yaml  outputs.tf
src/terraform/api_gateway/: api_gateway.tf  openapi.yaml  variables.tf
src/terraform/dynamo/: dynamo.tf
src/terraform/ecr/: ecr.tf
src/terraform/lambda/: lambda.tf  variables.tf
src/test/: test_latency_onerequest.py  test_latency_threadpool.py
src/utils/: transformer.py
