[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-model-titanic" 
description = "Modelo para predição de sobreviventes"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}